--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
@@ -24,7 +25,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "styled-components": "^6.1.19",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
