--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
