--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.3",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.26.1",
     "swiper": "^12.0.2",
     "yup": "^1.7.1"
   },
