--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@types/react-helmet": "^6.1.11",
     "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
