--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
@@ -46,6 +47,6 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.9"
+    "vite": "^7.1.10"
   }
 }
