--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-icons": "^1.13.1",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.546.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
